--- a/docs/reference/modules/nav.adoc
+++ b/docs/reference/modules/nav.adoc
@@ -1,5 +1,4 @@
-* xref::index.adoc[]
-** xref::command-routes.adoc[]
-** xref::internode-commands.adoc[]
-** xref::config.adoc[]
+* xref::command-routes.adoc[]
+* xref::internode-commands.adoc[]
+* xref::config.adoc[]
 * xref::release-notes.adoc[]
